--- a/package.json
+++ b/package.json
@@ -9,17 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
+    "@popperjs/core": "2.9.1",
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
-    "autoprefixer": "10.4.14",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "firebase": "^9.22.1",
+    "firebase-admin": "^11.9.0",
     "next": "13.4.4",
-    "postcss": "8.4.24",
+    "next-auth": "^4.22.1",
+    "openai": "^3.2.1",
     "react": "18.2.0",
+    "react-aiwriter": "^1.0.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2",
+    "react-firebase-hooks": "^5.1.1",
+    "react-hot-toast": "^2.4.1",
+    "react-select": "^5.7.3",
+    "react-simple-typewriter": "^5.0.1",
+    "swr": "^2.1.5",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2"
   }
 }
